ext/src/browser_action/style.css
#mainPopup {
  padding: 10px;
  height: 400px;
  width: 300px;
  font-family: Helvetica, Ubuntu, Arial, sans-serif;
}
/* On/Off Switch Styling */
.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}
/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}



/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: #98ff98;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}
/*End of On/Off Button Styling */

/* Top Buttons */

.headerTextColumn {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 150px;
  justify-content: flex-start;
  margin-top: -50px;
  
}

.headerLabel1 {
  font-family: "Montserrat SemiBold";
  font-size: 45px;
  color: #707070;
  text-align: center;
  line-height: 10%;

}
.headerLabel2 {
  font-family: "Lora";
  font-size: 25px;
  color: #707070;
  text-align: center;
  line-height: 10%;
  margin-top: -2%;
}

.headerLabel3 {
  font-family: "Montserrat";
  font-size: 20px;
  color: #707070;
  text-align: center;
  line-height: 10%;
  margin-top: -2px;
}

.statementFilterButton {
  height: 45px;
  border-radius: 2em;
  border: 1px solid #707070;
  font-family: "Montserrat";
  background-color: white;
  width: 32%;
  font-size: 11px;
  color: #707070;

}

.fa {
  margin-right: 3px;
}

.statementFilters {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  margin-bottom: 10px;
  width: 100%;
}


#flag {
  transform: translate(290px, -30px);
  width: 50%;
}
/* End Top Buttons*/

.statementrectangle {
  height: 80px;
  width: 95%;
  
  border: 1px solid #707070;
  text-align: center;
  font-family: "Hind Madurai";
  border-radius: 25px;
  position: relative;
  display: flex;
  flex-direction: row;
  align-items: center;


}
.statementRow {
  display: flex;
  flex-direction: row;
  align-items: flex-end;
  flex: 0.3
}
.statementColumn {
  display: flex;
  flex-direction: column;
}

.statementCircleTextRow {
  display: flex;
  flex-direction: row;
  flex: 0.7;
  align-items: center;
}

.statementcircle {
  background-color: #8BE5B3;
  position: relative;
  border: 1px solid #707070;
  height: 40px;
  width: 40px;
  border-radius: 20px;
  margin-left: 10px;
  
}

.statementtext {
  position: relative;
  text-align: left;
  margin-left: 10px;
  
  /* bottom: 35%;
  left: 20%; */
}

.statementbutton1 {
  height: 40px;
  width: 100px;
  
  text-align: center;
  font-family: Helvetica;
  border-top-right-radius: 25px;
  border-left: 1px solid #707070;
  position: relative;
  border-style: solid;
  border-bottom: none;
  background-color: white;
  
  /* left: 50.5%;
  bottom: 98.5%; */
  outline: none;
}
.statementbutton2 {
  height: 42px;
  width: 100px;

  text-align: center;
  font-family: Helvetica;
  border-bottom-right-radius: 25px;
  border-left: 1px solid #707070;
  position: relative;
  border-style: solid;
  background-color: white;
  /* left: 14.5%;
  bottom: 47.5%; */
  outline:none;
}
/* Slideshow container */

.slideshow-container {
  /* height: 80%f */
  width: 80%;
  position: relative;
  margin: auto;
}

/* Hide the images by default */
.mySlides {
  display: flex;
  text-align: center;
  justify-content: center;
}

/* Next & previous buttons */
.prev, .next {
  cursor: pointer;
  position: relative;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: white;
  font-weight: bold;
  font-size: 12px;
  transition: 1.0s ease;
  border-radius: 6px 6px 6px 6px;
  user-select: none;
  background-color: rgba(0,0,0,0.8);
}

.prev {
	left: 0%;
}

/* Position the "next button" to the right */
.next {
  left: 74%;
  border-radius: 6px 6px 6px 6px;
}

/* The dots/bullets/indicators */
.dot {
  cursor: pointer;
  height: 15px;
  width: 15px;
  margin: 0 2px;
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  transition: background-color 0.6s ease;
}

.active, .dot:hover {
  background-color: #717171;
}

/* Fading animation */
.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1s;
  animation-name: fade;
  animation-duration: 1s;
}


/* Statement Card 1 Styling */
#firstCard {
  display: flex;
  justify-content: center;
}

#statement1Border {
    border-radius:25px;
    border: 1px solid #707070;
    padding: 20px; 
    width: 200px;
    height: 200px;
}
#statement1Circle {
    height: 85px;
    width: 85px;
    background-color: #FF907C;
    border-radius: 50%;
    border: 1px solid #707070 ;
    display: inline-block;
}
#statement1Text1 {
    font-family: "Lora";
    font-size: 34px;
    color: #707070;
}   
#statement1Text2 {
  font-family: "Hind Madurai";
  font-size: 30px;
  color: #707070
}  
#statement1Text3 {
  font-family: "Montserrat";
  font-size: 18px;
  color: #707070
}  
/*End of Statement Card 1 Style*/


#secondCard {
  display:flex;
  justify-content: center;
  font-family: 'Hind Madurai', sans-serif;
  font-size: 20px;
  margin: auto;
}
#statement2Border {
  border-radius:25px;
  border: 1px solid #707070;
  padding: 20px; 
  width: 200px;
  height: 200px;
}

#statement2Text1 {
  font-family: "Hind Madurai";
  font-size: 20px;
}   
#statement2Text2 {
  font-family: "Hind Madurai";
  font-size: 14px;
}  
#statement2Text3 {
  font-family: "Montserrat";
  font-size: 14px;
} 

#statement2Text4 {
  font-family: "Hind Madurai";
  font-size: 14px;

}  
#statement2Text5 {
  font-family: "Montserrat";
  font-size: 14px;

} 

